--- a/bom/build.gradle
+++ b/bom/build.gradle
@@ -14,5 +14,7 @@ dependencies {
         api 'org.slf4j:slf4j-api:1.7.32'
         api 'org.projectlombok:lombok:1.18.32'
         api 'org.postgresql:postgresql:42.7.4'
+        api 'org.assertj:assertj-core:3.19.0'
+        api 'net.datafaker:datafaker:2.4.2'
     }
 }
