--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ subprojects {
             compileOnly 'org.projectlombok:lombok'
             testCompileOnly 'org.projectlombok:lombok'
             testAnnotationProcessor 'org.projectlombok:lombok'
+            testImplementation 'org.assertj:assertj-core'
+            testImplementation 'net.datafaker:datafaker'
         }
 
 
