basebook-5 crud implementation

--- a/bom/build.gradle
+++ b/bom/build.gradle
@@ -9,20 +9,35 @@ javaPlatform {
 
 dependencies {
     constraints {
+        // Spring Framework
         api 'org.springframework:spring-core:6.2.0'
         api 'org.springframework:spring-web:6.2.0'
         api 'org.springframework:spring-context:6.2.0'
         api 'org.springframework:spring-webmvc:6.2.0'
+        api 'org.springframework:spring-jdbc:6.2.0'
+        api 'org.springframework:spring-beans:6.2.0'
+
+        // Logging
         api 'org.slf4j:slf4j-api:1.7.32'
+        api 'org.slf4j:slf4j-simple:2.0.9'
+
+        // Lombok
         api 'org.projectlombok:lombok:1.18.32'
+
+        // PostgreSQL Driver
         api 'org.postgresql:postgresql:42.7.4'
+
+        // Testing
         api 'org.assertj:assertj-core:3.19.0'
+        api 'org.springframework:spring-test:6.2.0'
         api 'net.datafaker:datafaker:2.4.2'
+
+        // Thymeleaf
         api 'org.thymeleaf:thymeleaf:3.1.2.RELEASE'
         api 'org.thymeleaf:thymeleaf-spring6:3.1.2.RELEASE'
+
+        // Servlet API
         api 'javax.servlet:javax.servlet-api:4.0.1'
-        api 'org.springframework:spring-test:6.2.0'
-        api 'org.slf4j:slf4j-simple:2.0.9'
     }
 }
 
