--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ subprojects {
             testImplementation 'net.datafaker:datafaker'
             implementation 'org.slf4j:slf4j-simple'
             implementation 'org.slf4j:slf4j-api'
+            implementation 'org.yaml:snakeyaml'
         }
 
 
