--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -1,3 +1,9 @@
 dependencies {
     implementation 'org.postgresql:postgresql'
+    implementation 'org.springframework:spring-core'
+    implementation 'org.springframework:spring-context'
+    implementation 'org.springframework:spring-jdbc'
+    implementation 'org.springframework:spring-beans'
+
+    implementation project(':api')
 }
