--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
     implementation 'org.springframework:spring-core'
     implementation 'org.springframework:spring-context'
+    implementation project(':api')
+    implementation project(':persistence')
 }
