--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
     implementation 'org.postgresql:postgresql'
+    implementation 'com.h2database:h2'
+    testImplementation 'com.h2database:h2'
     implementation 'org.springframework:spring-core'
     implementation 'org.springframework:spring-context'
     implementation 'org.springframework:spring-jdbc'
