basebook-8 changes in DefaultPostRepository Repo + minor fixes

--- a/service/src/main/resources/application-dev.properties
+++ b/service/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-database.url=jdbc:postgresql://localhost:5432/mydb
-database.username=user
-database.password=password
-database.driver=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
