basebook-9 add a post

--- a/build.gradle
+++ b/build.gradle
@@ -61,4 +61,8 @@ tasks.register('copyArtifacts', Copy) {
 
 build.dependsOn(copyArtifacts)
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs << "-parameters"
+}
+
 
