--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,6 +1,8 @@
 dependencies {
-    implementation 'org.springframework:spring-core'
-    implementation 'org.springframework:spring-context'
     implementation project(':api')
     implementation project(':persistence')
+
+    implementation 'org.springframework:spring-core'
+    implementation 'org.springframework:spring-context'
+    implementation 'org.springframework:spring-beans'
 }
