basebook-11 view of images

--- a/service/src/main/resources/application.properties
+++ b/service/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.profiles.default=test
-image.upload.dir=../webapps/ROOT/uploads/images
+image.upload.dir=../uploads/images
+image.upload.resource=file:/usr/local/tomcat/uploads/
+image.static.resource=classpath:/static/
