--- a/service/build.gradle
+++ b/service/build.gradle
@@ -5,4 +5,6 @@ dependencies {
     implementation 'org.springframework:spring-core'
     implementation 'org.springframework:spring-context'
     implementation 'org.springframework:spring-beans'
+    testImplementation 'org.springframework:spring-test'
+    testImplementation 'org.mockito:mockito-core'
 }
