--- a/web/build.gradle
+++ b/web/build.gradle
@@ -3,10 +3,12 @@ apply {
 }
 
 dependencies {
-    implementation 'org.springframework:spring-web'
-    implementation 'org.springframework:spring-webmvc'
     implementation project(':api')
     implementation project(':service')
+
+    implementation 'org.springframework:spring-web'
+    implementation 'org.springframework:spring-webmvc'
+    testImplementation 'org.springframework:spring-test'
     implementation 'org.thymeleaf:thymeleaf'
     implementation 'org.thymeleaf:thymeleaf-spring6'
     testImplementation 'org.springframework:spring-test'
