--- a/bom/build.gradle
+++ b/bom/build.gradle
@@ -35,6 +35,7 @@ dependencies {
         api 'org.springframework:spring-test:6.2.0'
         api 'net.datafaker:datafaker:2.4.2'
         api 'org.mockito:mockito-core:5.14.2'
+        api 'org.hamcrest:hamcrest:2.2'
 
         // Thymeleaf
         api 'org.thymeleaf:thymeleaf:3.1.2.RELEASE'
