--- a/web/build.gradle
+++ b/web/build.gradle
@@ -9,9 +9,12 @@ dependencies {
     implementation 'org.springframework:spring-web'
     implementation 'org.springframework:spring-webmvc'
     testImplementation 'org.springframework:spring-test'
+    implementation 'org.springframework:spring-jdbc'
     implementation 'org.thymeleaf:thymeleaf'
     implementation 'org.thymeleaf:thymeleaf-spring6'
     testImplementation 'org.springframework:spring-test'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
+    testImplementation 'org.hamcrest:hamcrest'
     providedRuntime 'javax.servlet:javax.servlet-api:4.0.1'
+    testImplementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 }
