--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'checkstyle'
 }
 
 
@@ -14,6 +15,8 @@ allprojects {
 
 
 subprojects {
+    apply plugin: 'checkstyle'
+
     if (project.name != 'bom') {
         apply plugin: 'java'
 
