--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     implementation 'org.springframework:spring-context'
     implementation 'org.springframework:spring-jdbc'
     implementation 'org.springframework:spring-beans'
+    testImplementation 'org.springframework:spring-test'
 
     implementation project(':api')
 }
