--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
 
 
 allprojects {
-    group = 'com.basebook'
-    version = '1.0.0'
+    group = project.property('group')
+    version = project.property('version')
     repositories {
         mavenCentral()
     }
