--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     implementation 'org.springframework:spring-jdbc'
     implementation 'org.springframework:spring-beans'
     testImplementation 'org.springframework:spring-test'
+    implementation 'org.yaml:snakeyaml'
 
     implementation project(':api')
 }
