basebook-21 final move to Spring Boot

--- a/.gitignore
+++ b/.gitignore
@@ -169,5 +169,6 @@ gradle-app.setting
 *.hprof
 .gitattributes
 .mvn/
+target/
 
 # End of https://www.toptal.com/developers/gitignore/api/gradle,java,intellij
