basebook-26 Switched to test container

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-#    initialization-mode: always
+    initialization-mode: never
     # Указываем имя контейнера в URL!
     url: jdbc:postgresql://db:5432/basebook
     username: baseadm
